--- a/src/app/escritorio/escritorio.component.html
+++ b/src/app/escritorio/escritorio.component.html
@@ -2,7 +2,7 @@
   <link rel="manifest" href="/manifest.json">
 </head>
 <!-- Navigation -->
-<nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary sticky-top fixed-top">
   <div class="container">
     <a class="navbar-brand" routerLink="/escritorio">
         <i class="fas fa-user fa-4x bg-dark p-2"></i>
